introduction into distrubited systems, underying motivation and some review

--- a/main.tex
+++ b/main.tex
@@ -38,8 +38,20 @@
 
 \vfill
 
+\begin{center}
+    \noindent All illustration contain original assets.
+\end{center}
+    \begin{center}
+        \textcolor{red}{\textit{Disclaimer: These notes are my personal understanding and interpretation of the course material. 
+        They are not officially endorsed by the instructor or the university. Please use them as a supplementary resource and refer 
+        to the official course materials for accurate information.}}
+    \end{center}
+
+    \chapter*{Prerequisites}
+    \input{Sections/pre}
+    
 \chapter{Introduction}
-\input{Sections/Intro.tex}
+\input{Sections/high/high}
 
 
 \bibliographystyle{plain} % We choose the "plain" reference style
