--- a/main.tex
+++ b/main.tex
@@ -48,11 +48,11 @@
     \end{center}
 
     \chapter*{Prerequisites}
-    \input{Sections/pre}
+    % \input{Sections/pre}
     
 \chapter{Introduction}
-\input{Sections/high/high}
-
+% \input{Sections/high/high}
+\input{Sections/rpc/rpc}
 
 \bibliographystyle{plain} % We choose the "plain" reference style
 \bibliography{refs} % Entries are in the refs.bib file
