--- a/main.tex
+++ b/main.tex
@@ -51,8 +51,8 @@
     % \input{Sections/pre}
     
 \chapter{Introduction}
-\input{Sections/high/high}
-% \input{Sections/rpc/rpc}
+% \input{Sections/high/high}
+\input{Sections/rpc/rpc}
 
 \bibliographystyle{plain} % We choose the "plain" reference style
 \bibliography{refs} % Entries are in the refs.bib file
